--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-native-paper": "^5.12.3",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-vector-icons": "^10.0.3",
-    "expo-location": "~16.1.0"
+    "expo-location": "~16.1.0",
+    "expo-sqlite": "~11.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
